# TPE-PI

./: .gitignore  CMakeLists.txt  Makefile  PeatonesADT.c  PeatonesADT.h  README.md  main.c  pedestrians  testAddReadingsDependent.c  testErrno.c  testFiles.c  testGetSensorCount&IDs.c  testPutSensor.c
